--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
              <img src ="assets/blockbuster-logo.svg" alt="logo">
          </div>
         <nav>
-            <a href = "#">Accion</a>
+            <a href = "#">Acción</a>
             <a href = "#">Terror</a>
             <a href = "#">Comedia</a>
-            <a href = "#">Romantica</a>
+            <a href = "#">Romántica</a>
         </nav>
     </header>
     <main>
@@ -52,12 +52,12 @@
                 <button type="submit">Añadir</button>
             </form>
         </section>
-       
     </main>
-
+<footer>  
+    <p>&copy; 2025 Blockbuster Project</p>
+</footer>
     <script type="module" src="./js/films.js"></script>   
     <script type="module" src="./js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
 </body>
 </html>
