--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
                 <input type="number" id="year" required>
                 <label for="description">Descripción:</label>
                 <input type="text" id="description" required>
-                <label for="text">URL Foto:</label>
+                <label for="url">URL Foto:</label>
                 <input type="url" id="url" required>
                 <label for="genero">Género:</label>
-                <select id="genero" required>
-                    <option value="accion">Acción</option>
-                    <option value="comedia">Comedia</option>
-                    <option value="terror">Terror</option>
-                    <option value="romantica">Romántica</option>
+                <select id="gender" required>
+                    <option value="Acción">Acción</option>
+                    <option value="Comedia">Comedia</option>
+                    <option value="Terror">Terror</option>
+                    <option value="Romántica">Romántica</option>
                 </select>
                 <button type="submit">Añadir</button>
             </form>
@@ -56,8 +56,7 @@
 <footer>  
     <p>&copy; 2025 Blockbuster Project</p>
 </footer>
-    <script type="module" src="./js/films.js"></script>   
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>  
     <script type="module" src="./js/script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
